--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "daisyui": "^3.9.3",
-    "express": "^4.18.2"
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "tailwind-variants": "^0.1.18"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.3"
