--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "daisyui": "^3.9.3",
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.35.1",
+    "tailwind-variants": "^0.1.18"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.3"
