--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
+    "dev" : " npm run start",
     "tw:build": "tailwindcss build ./public/css/tailwind.css -o ./public/css/main.css"
   },
   "author": "Audrey Duzon",
